public class Bookingsystem {

    /* Different functions for different rights
     Mechanic rights/functions:
     - be booked by the foreman for different assignment for a car
     - A function where the mechanic can make a booking complete
     -

     Foreman rights/functions:
      - A list over Mechanics that are available
      - A list over Mechanics that aren't available and what assignment they are working on with
        an approx. time when the mechanic is finished
      - To book a mechanic for a specific assignment on a car

    */
    // Function
    public static void bookingAMechanic() {

    }
}
