public class Foreman extends User{
    public Foreman(int id, String username, String password, String rights) {
        super(id, username, password, rights);
    }
}
