public class Mechanic extends User{
    public Mechanic(int id, String username, String password, String rights) {
        super(id, username, password, rights);
    }

}
